2010-09-21  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised DBAL to version 1.2.0alpha2

2010-09-20  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15743: Bug:function in t3lib_iconWorks is not public (Thanks to Steffen Ritter)
	* Follow-up to #15741: Feature: PageRenderer should be able to include locallang-files as JS-InlineLabels
	* Follow-up to #15742: HCI: Add new Icons from Lars for Workspace Module to t3skin
	* Fixed bug #15753: Pageicons in WS module are broken

2010-09-20  Francois Suter  <francois@typo3.org>

	* Fixed bug #14783: absRefPrefix should work with $TYPO3_CONF_VARS[BE][RTE_imageStorageDir] (thanks to Steffen Mueller)
	* Fixed bug #15290: Wrong behavior of workspace preview "Enable Frontend Preview" (Thanks to Andreas Kiessling)

2010-09-19  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #8260: Update Wizard in install tool force temp-configuration files and load configuration twice
	* Added feature #15741: PageRenderer should be able to include locallang-files as JS-InlineLabels (thanks to Steffen Ritter)

2010-09-19  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #12964: feedit - EDITPANEL -> "newRecordinPid" doesn't work anymore with feedit (Thanks to Sven Juergens)
	* Fixed bug #3908: DisplayCond => VERSION:IS:false always returns true (Thanks to Daniel Poetzinger)

2010-09-18  Steffen Kamper  <steffen@typo3.org>

	* Added feature #5983: #15742: HCI: Add new Icons from Lars for Workspace Module to t3skin (Thanks to Lars Zimmermann and Stefffen Ritter)

2010-09-18  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #5983: Undefined variable is used in t3lib_BEfunc::exec_foreign_table_where_query (Thanks to Oliver Klee)

2010-09-18  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #11415 - Misleading info: No workspaces found!

2010-09-17  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #15628: Remove logging when class loading failed in t3lib_autoloader (Thanks to Helmut Hummel)
