@@ -73,7 +73,9 @@ class t3lib_extjs_ExtDirectApi {
 
 			// look up into the cache
 		$cacheIdentifier = 'ExtDirectApi';
-		$cacheHash = md5($cacheIdentifier . $filterNamespace . serialize($this->settings));
+		$cacheHash = md5($cacheIdentifier . $filterNamespace .
+			serialize($this->settings) . TYPO3_MODE);
+		
 			// with no_cache always generate the javascript content
 		$cacheContent = $noCache ? '' : t3lib_pageSelect::getHash($cacheHash);
 
@@ -168,7 +170,7 @@ class t3lib_extjs_ExtDirectApi {
 
 				if (!isset($javascriptNamespaces[$javascriptNamespace])) {
 					$javascriptNamespaces[$javascriptNamespace] = array(
-						'url' => t3lib_div::locationHeaderUrl('ajax.php?ajaxID=ExtDirect::route&namespace=') . rawurlencode($javascriptNamespace),
+						'url' => $this->getRoutingUrl($javascriptNamespace),
 						'type' => 'remoting',
 						'actions' => array(),
 						'namespace' => $javascriptNamespace
@@ -193,6 +195,24 @@ class t3lib_extjs_ExtDirectApi {
 		}
 
 		return $javascriptNamespaces;
+	}
+
+	/**
+	 * Returns the convenient path for the routing Urls based on the TYPO3 mode.
+	 *
+	 * @param string $namespace
+	 * @return string
+	 */
+	public function getRoutingUrl($namespace) {
+		$url = '';
+		if (TYPO3_MODE === 'FE') {
+			$url = t3lib_div::locationHeaderUrl('?eID=ExtDirect&action=route&namespace=');
+		} else {
+			$url = t3lib_div::locationHeaderUrl('ajax.php?ajaxID=ExtDirect::route&namespace=');
+		}
+		$url .= rawurlencode($namespace);
+
+		return $url;
 	}
 }
 
